# tau2-bench-agent

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
.claude/commands/: commit.md
.specify/: phase1-plan.md
.specify/memory/: constitution.md
simple_nebius_agent/: README.md  __init__.py  agent.json  agent.py
specs/001-a2a-integration/: adk-agent-quickstart.md  data-model.md  plan.md  quickstart.md  research.md  sequence_diagrams.md  spec.md  tasks.md  tau2-bench-adk-design.md  test-config.md
specs/001-a2a-integration/checklists/: requirements.md
specs/001-a2a-integration/contracts/: README.md  a2a-message-protocol.yaml  agent-discovery.yaml
specs/001-a2a-integration/scripts/: eval_domain.sh  platform_simulation.py  run_simple_agent.sh  run_with_haiku.sh  run_with_nebius.sh  test_simple_agent.sh
specs/001-a2a-integration/testing/: local-test-architecture.md  local-test-eval-guide.md
src/experiments/hyperparam/: analyze_results.py  run_eval.py
src/tau2/: cli.py  config.py  registry.py  run.py
src/tau2/a2a/: __init__.py  client.py  exceptions.py  metrics.py  models.py  translation.py
src/tau2/agent/: a2a_agent.py  base.py  llm_agent.py
src/tau2/data_model/: message.py  simulation.py  tasks.py
src/tau2/domains/airline/: data_model.py  environment.py  tools.py
src/tau2/domains/mock/: data_model.py  environment.py
src/tau2/domains/retail/: data_model.py  environment.py  tools.py
src/tau2/domains/telecom/: data_model.py  environment.py  tools.py  user_data_model.py  user_tools.py
src/tau2/domains/telecom/tasks/: manager.py  mms_issues.py  mobile_data_issues.py  service_issues.py  utils.py
src/tau2/environment/: db.py  environment.py  server.py  tool.py  toolkit.py
src/tau2/environment/utils/: interface_agent.py
src/tau2/evaluator/: evaluator_base.py  evaluator_env.py
src/tau2/gym/: __init__.py  gym_agent.py
src/tau2/orchestrator/: environment_manager.py  orchestrator.py
src/tau2/scripts/: evaluate_trajectories.py  manual_mode.py  view_simulations.py
src/tau2/scripts/leaderboard/: prepare_submission.py  submission.py  verify_trajectories_private.py
src/tau2/user/: base.py  user_simulator.py
src/tau2/utils/: display.py  io_utils.py  llm_utils.py  pydantic_utils.py  tools.py
tau2_agent/: README.md  __init__.py  agent.json  agent.py
tau2_agent/tools/: get_evaluation_results.py  list_domains.py  run_tau2_evaluation.py
tests/: conftest.py  test_agent.py  test_environment.py  test_orchestrator.py  test_tasks.py  test_utils.py
tests/test_a2a_client/: conftest.py  test_a2a_agent.py  test_agent_discovery.py  test_debug_logging.py  test_message_translation.py  test_metrics.py  test_metrics_export.py  test_performance.py
tests/test_a2a_e2e/: README.md  conftest.py  test_client_to_server.py  test_evaluation_flow.py
tests/test_adk_server/: __init__.py  test_a2a_endpoint.py  test_agent_card.py  test_tools.py
tests/test_backward_compatibility/: __init__.py  conftest.py  test_cli.py  test_llm_agent.py  test_regression.py
tests/test_local_eval/: __init__.py  conftest.py  test_simple_agent_e2e.py
web/leaderboard/public/submissions/gemini-3-pro_google_2025-11-18/: submission.json
